Segundo Commit 1 Parte

--- a/projetopw/src/components/layout/Content.css
+++ b/projetopw/src/components/layout/Content.css
@@ -19,7 +19,7 @@
     text-align: center;
 }
 
-.titulo h1, h2 {
+.titulo h1, h2, h3, h4, h5, h6 {
     margin: 0;
 }
 
@@ -33,4 +33,5 @@
     margin: 0 auto;
     padding: 100px;
     width: 85%; 
+    font-family: 'Roboto', sans-serif;
 }
