--- a/projetopw/src/components/layout/Menu.css
+++ b/projetopw/src/components/layout/Menu.css
@@ -28,8 +28,9 @@
 
 .Menu li a:hover {
     text-decoration: underline;
+    background-color: #1560d1;
 }
 
 .Menu li a:active{
-    background-color: #0054CE;
+    background-color: #115fd3;
 }
